force-app/main/default/objects/Task_Template__c/fields/Assigned_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Name__c</fullName>
    <description>Filled in by &quot;Assigned To&quot; flow to show who/what the template is assigned to.</description>
    <label>Assigned To Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>