force-app/main/default/objects/Task_Template__c/fields/Assigned_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Type__c</fullName>
    <label>Assigned Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assign_Type</valueSetName>
    </valueSet>
</CustomField>