force-app/main/default/objects/Task_Template__c/fields/Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Id__c</fullName>
    <description>The ID of the user, queue, etc that the user is assigned to.  This is handled by a lightning component.</description>
    <label>Assignee Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>