force-app/main/default/objects/Task_Template__c/fields/Is_Master_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Template__c</fullName>
    <formula>ISBLANK( Parent_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Master Template</label>
    <type>Checkbox</type>
</CustomField>