force-app/main/default/objects/Task_Template__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>The level depth of this case relative to the master template.</description>
    <label>Level</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>