force-app/main/default/objects/Task_Template__c/fields/Master_Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Master_Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Task Template</label>
    <referenceTo>Master_Task_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>