force-app/main/default/objects/Task_Template__c/fields/Number_Of_Child_Template_Steps__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Child_Template_Steps__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Child Template Steps</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>