force-app/main/default/objects/Task_Template__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <inlineHelpText>The API name of the object that will use this template.  This allows templates to only show up on certain objects.  If it is blank the template will show up on all areas that create templates.</inlineHelpText>
    <label>Object Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>