force-app/main/default/objects/Task_Template__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <inlineHelpText>The API name of the object this template is used for</inlineHelpText>
    <label>Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>