force-app/main/default/objects/Task_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Template</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>