force-app/main/default/objects/Task_Template__c/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <label>Record Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific User</fullName>
            </value>
            <value>
                <fullName>Object Owner</fullName>
            </value>
            <value>
                <fullName>Person Creating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>