force-app/main/default/objects/Task_Template__c/fields/Templated_Name__c.field-meta.xml
<CustomField>
    <fullName>Templated_Name__c</fullName>
    <inlineHelpText>Allows templating names of cases/tasks.  Can include &quot;[Name]&quot; to insert the name of the targeted object.</inlineHelpText>
    <label>Templated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>