force-app/main/default/objects/Task_Template__c/fields/Templated_Object__c.field-meta.xml
<CustomField>
    <fullName>Templated_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the object that this template can be used.</description>
    <inlineHelpText>References the object that this template can be used.</inlineHelpText>
    <label>Templated Object</label>
    <referenceTo>Object__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>