force-app/main/default/objects/Task_Template__c/fields/Templated_Objects__c.field-meta.xml
<CustomField>
    <fullName>Templated_Objects__c</fullName>
    <inlineHelpText>A list of objects that this template can be used with.  If custom objects are desired, their API name will need to be added to the picklist values.</inlineHelpText>
    <label>Templated Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>