force-app/main/default/objects/Task_Template__c/fields/Total_Number_Of_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Steps__c</fullName>
    <formula>Number_Of_Child_Template_Steps__c +   Number_of_Child_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number Of Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>