force-app/main/default/objects/Task_Template__c/recordTypes/Task.recordType-meta.xml
<RecordType>
    <fullName>Task</fullName>
    <active>false</active>
    <description>Used to create a task on objects</description>
    <label>Task</label>
</RecordType>