force-app/main/default/objects/Task_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Type__c</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Is_Master_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>