force-app/main/default/objects/Task_Template__c/listViews/Parent_Templates.listView-meta.xml
<ListView>
    <fullName>Parent_Templates</fullName>
    <columns>NAME</columns>
    <columns>Templated_Name__c</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Total_Number_Of_Steps__c</columns>
    <columns>Number_of_Child_Steps__c</columns>
    <columns>Number_Of_Child_Template_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Master_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Master Templates</label>
</ListView>